# check_urls

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
my_crawler/: hello.csv  output.csv
my_crawler/my_crawler/: middlewares.py  settings.py
my_crawler/my_crawler/spiders/: example.py
