[project]
name = "check_urls"
version = "0.1.0"
description = ""
authors = [
    {name = "Nguyen Thi My Ha",email = "hantm.nta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
